<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CsenPoomsaeScore</string>
    <string name="app_title">CSEN Poomsae Score</string>
    <string name="powered_by">Powered by Giacomo Frisoni &amp; Marcin Pabich"</string>

    <string name="start">Start</string>
    <string name="scores">Scores</string>
    <string name="settings">Settings</string>

    <string name="connection_avaiable_message">Server is not configured. To use app in "online" mode please set the server in settings panel.</string>
    <string name="connection_continue_offline">Continue offline</string>
    <string name="connection_config_server">Go to settings to configure server</string>
    <string name="internet_avaiable_message">Server seems to be configured, but you lost internet connection.</string>
    <string name="internet_wait">I\'ll check the connection</string>

    <string name="back_symbol">&lt;   %1$s</string>
    <string name="forward_symbol">%1$s   &gt;</string>
    <string name="menu">Menu</string>
    <string name="accuracy">Accuracy</string>
    <string name="presentation">Presentation</string>
    <string name="results">Results</string>
    <string name="end_valutation">End valutation</string>
    <string name="score_description">%1s: </string>
    <string name="forward">Next</string>
    <string name="back">Back</string>
    <string name="result_menu_title">Connection</string>

    <string name="send_scores">Send scores</string>
    <string name="scores_not_sent">There\'s a problem with sending scores.</string>
    <string name="scores_not_sent_internet">There\'s a problem with sending scores: internet unavaiable</string>
    <string name="scores_not_sent_server">There\'s a problem with sending scores: server error</string>
    <string name="scores_not_sent_yet">Scores wasn\'t send yet</string>

    <string name="scores_confirm_received">I confirm score received</string>
    <string name="scores_not_confirm_received">Go back</string>

    <string name="go_to_scores">Show results screen</string>

    <string name="check_credentials">Check credentials</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm">Confirm</string>
    <string name="attention">Attention</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="wrong_password">Wrong password</string>
    <string name="end_valutation_message_offline_title">Go back to menu</string>
    <string name="end_valutation_message_online_title">Go to send scores</string>
    <string name="end_valutation_message_offline">You\'re in offline mode. Do you want to go back to menu?</string>
    <string name="end_valutation_message_online">Are you sure to close this valuation and go to send menu?</string>
    <string name="back_accuracy_message">Going back you will lose any unsaved modifiers. Continue?</string>
    <string name="end_connection_message">Are you sure you want to back to menu? You\'ll not be able anymore to send this score to server</string>

    <string name="ask_write_permission_message">You need to authorize the app for modifying brightness. Enable it on the next page.</string>

    <string name="speed_power">Speed and Power</string>
    <string name="strength_pace">Strength and Pace</string>
    <string name="energy">Energy expression</string>

    <string name="perfect">Perfect</string>
    <string name="excellent">Excellent</string>
    <string name="very_good">Very good</string>
    <string name="good">Good</string>
    <string name="poor">Poor</string>
    <string name="very_poor">Very poor</string>

    <string name="sending_data_title">Sending</string>
    <string name="sending_data_message">Sending data to server, please wait…</string>
    <string name="sending_data_error">Cannot sent data to server</string>
    <string name="retry">Retry</string>
    <string name="return_to_results">Return to results</string>
    <string name="continue_to_homepage">Continue to home</string>

    <string name="regulate_brightness">Regulate brightness</string>
    <string name="auth_back_text">Authorize score changes</string>
    <string name="clear_scores_list">Delete saved scores</string>
    <string name="cleared_list">Cleared list</string>
    <string name="ip_adress">IP Address</string>
    <string name="connect">Connect</string>
    <string name="package_sent">Package sent</string>
    <string name="package_not_sent">Package not sent</string>
    <string name="invalid_ip">Invalid IP</string>
    <string name="no_connection">No connection avaiable</string>

    <string name="no_scores">No stored score</string>

    <string name="choose_language">Choose the language</string>

    <string name="add_big_penality">- 0,3</string>
    <string name="remove_big_penality">+ 0,3</string>
    <string name="add_small_penality">- 0,1</string>
    <string name="remove_small_penality">+ 0,1</string>

    <string name="small_logo">Logo CSEN</string>
    <string name="big_logo">Logo CSEN</string>
    <string name="total">Total</string>

    <string name="tablet_not_connected_info">Tablet not connected. Please configure the IP address in settings.</string>
    <string name="tablet_not_connected">Tablet not connected.</string>
    <string name="tablet_connected">Tablet is now connected to: %1$s</string>
    <string name="tablet_connected_device_id">Tablet is now connected to %1$s with DeviceID %2$s</string>
    <string name="tablet_connecting">Waiting for server response…</string>
    <string name="tablet_not_connected_warning">Cannot connect to the server!</string>
    <string name="tablet_check_connection">Checking server connection status…</string>
    <string name="tablet_waiting_for_ack">Waiting for final response…</string>
    <string name="hidden_settings">Advanced settings</string>
    <string name="show_hidden_settings">Show advanced settings</string>
    <string name="hide_hidden_settings">Hide advanced settings</string>
    <string name="quick_tablet_not_connected">Pair your device here, if it\'s not connected</string>
    <string name="scores_sending">Sending scores to server…</string>
    <string name="scores_sent">Scores has successfully arrived to server!</string>


    <string-array name="languages">
        <item>Select language</item>
        <item>English</item>
        <item>Italian</item>
        <item>Polish</item>
    </string-array>
</resources>
