<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <it.frisoni.pabich.csenpoomsaescore.widgets.CustomNavBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/scores"
        app:backText="@string/menu"
        app:forwardEnabled="false"
        android:id="@+id/nav_bar">
    </it.frisoni.pabich.csenpoomsaescore.widgets.CustomNavBar>

    <ListView
        android:layout_below="@id/nav_bar"
        android:id="@+id/lsv_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

    <TextView
        android:id="@+id/txv_placeholder"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>