<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <it.frisoni.pabich.csenpoomsaescore.widgets.CustomNavBar
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backEnabled="false"
        app:forwardText="@string/menu"
        app:titleText="@string/result_menu_title" />

    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_below="@id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_margin="50dp"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/btn_send_scores"
                android:text="@string/send_scores"/>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txv_error_sending"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_height="40dp"
                    android:text="@string/scores_not_sent_yet"
                    android:textAlignment="center"
                    android:textStyle="italic" />

                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/progress_bar"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_height="40dp"/>
            </RelativeLayout>





        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="50dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_show_results"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:text="@string/go_to_scores" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
