<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.frisoni.pabich.csenpoomsaescore.MenuActivity">

    <TextView
        android:textColor="#FFFFFF"
        android:textSize="80dp"
        android:id="@+id/txtTitle"
        android:layout_margin="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_centerInParent="true"
        android:id="@+id/lnlButtonContainer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <Button
            style="@style/MediumButtonText"
            android:id="@+id/btnLaunch"
            android:layout_weight="1"
            android:text="@string/start" />

        <Button
            style="@style/MediumButtonText"
            android:id="@+id/btnList"
            android:layout_weight="1"
            android:text="@string/scores" />

        <Button
            style="@style/MediumButtonText"
            android:id="@+id/btnSettings"
            android:layout_weight="1"
            android:text="@string/settings" />
    </LinearLayout>



    <LinearLayout
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="IMMAGINE UNO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="IMMAGINE UNO" />
    </LinearLayout>



</RelativeLayout>
