<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <it.frisoni.pabich.csenpoomsaescore.widgets.CustomNavBar
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backText="@string/presentation"
        app:forwardText="some text"
        app:titleText="@string/results" />


    <ImageView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/detail_score"
        android:layout_alignEnd="@+id/detail_score"
        android:layout_alignRight="@+id/detail_score"
        android:layout_below="@+id/nav_bar"
        android:layout_marginBottom="15sp"
        android:layout_marginTop="20dp"
        android:background="@color/gray"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:paddingTop="1dp"
        android:scaleType="fitXY" />

    <com.lb.auto_fit_textview.AutoResizeTextView
        android:id="@+id/txv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lnl_logos"
        android:layout_alignLeft="@+id/separator"
        android:layout_alignStart="@+id/separator"
        android:layout_below="@+id/nav_bar"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="15sp"
        android:gravity="center"
        android:text="10.0"
        android:textAlignment="center"
        android:textColor="@color/text_dark"
        android:textSize="600sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/lnl_logos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/small_logo"
            android:padding="10dp"
            android:src="@drawable/taekw_logo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/big_logo"
            android:padding="10dp"
            android:src="@drawable/taekw_text_logo" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/detail_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lnl_logos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/txv_total"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:weightSum="100">


        <LinearLayout
            android:id="@+id/relative_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_weight="47"
            android:gravity="center"
            android:orientation="vertical">

            <com.lb.auto_fit_textview.AutoResizeTextView
                android:id="@+id/txv_accuracy_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Accuratezza"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/text_dark"
                android:textSize="30sp" />

            <com.lb.auto_fit_textview.AutoResizeTextView
                android:id="@+id/txv_accuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txv_accuracy_title"
                android:layout_centerInParent="true"
                android:text="4.0"
                android:textAlignment="center"
                android:textColor="@color/text_dark"
                android:textSize="150sp" />

        </LinearLayout>





        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_weight="47"
            android:gravity="center"
            android:orientation="vertical">

            <com.lb.auto_fit_textview.AutoResizeTextView
                android:id="@+id/txv_presentation_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="Presentazione"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/text_dark"
                android:textSize="30sp" />

            <com.lb.auto_fit_textview.AutoResizeTextView
                android:id="@+id/txv_presentation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/txv_presentation_title"
                android:text="4.0"
                android:textAlignment="center"
                android:textColor="@color/text_dark"
                android:textSize="150sp" />
        </LinearLayout>


    </LinearLayout>
    -->
    <!--
        <it.frisoni.pabich.csenpoomsaescore.widgets.CustomNavBar
            android:id="@+id/nav_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backText="@string/presentation"
            app:forwardText="some text"
            app:titleText="@string/results" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nav_bar"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">

            <RelativeLayout
                android:id="@+id/rtl_small_scores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">


                <com.lb.auto_fit_textview.AutoResizeTextView
                    android:id="@+id/txv_presentation_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textSize="100sp"
                    android:text="Presentazione" />

                <com.lb.auto_fit_textview.AutoResizeTextView
                    android:id="@+id/txv_presentation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txv_presentation_title"
                    android:layout_centerHorizontal="true"
                    android:text="4.0"
                    android:textSize="100sp"
                    android:textAlignment="center" />




                <com.lb.auto_fit_textview.AutoResizeTextView
                    android:id="@+id/txv_accuracy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="4.0"
                    android:textSize="100sp"
                    android:textAlignment="center" />

                <com.lb.auto_fit_textview.AutoResizeTextView
                    android:id="@+id/txv_accuracy_title"
                    android:layout_above="@id/txv_accuracy"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="100sp"
                    android:text="Accuratezza" />
            </RelativeLayout>

            <com.lb.auto_fit_textview.AutoResizeTextView
                android:id="@+id/txv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="4.0"
                android:textAlignment="center"
                android:textSize="300sp"/>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/rtl_small_scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nav_bar">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <com.lb.auto_fit_textview.AutoResizeTextView
                    android:id="@+id/txv_presentation_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Presentazione" />

                <com.lb.auto_fit_textview.AutoResizeTextView
                    android:id="@+id/txv_presentation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/txv_presentation_title"
                    android:layout_alignLeft="@id/txv_presentation_title"
                    android:layout_alignRight="@+id/txv_presentation_title"
                    android:layout_alignStart="@id/txv_presentation_title"
                    android:layout_below="@id/txv_presentation_title"
                    android:text="4.0"
                    android:textAlignment="center" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <com.lb.auto_fit_textview.AutoResizeTextView
                    android:id="@+id/txv_accuracy_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Accuratezza" />

                <com.lb.auto_fit_textview.AutoResizeTextView
                    android:id="@+id/txv_accuracy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/txv_accuracy_title"
                    android:layout_alignLeft="@id/txv_accuracy_title"
                    android:layout_alignRight="@+id/txv_accuracy_title"
                    android:layout_alignStart="@id/txv_accuracy_title"
                    android:layout_below="@id/txv_accuracy_title"
                    android:text="4.0"
                    android:textAlignment="center" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/separator"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="#000000"
                android:paddingBottom="20dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingTop="1dp"
                android:scaleType="fitXY" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/rtl_small_scores"
            android:layout_alignRight="@id/rtl_small_scores"
            android:layout_below="@id/nav_bar"
            android:gravity="center"
            android:layout_centerVertical="true">

            <com.lb.auto_fit_textview.AutoResizeTextView
                android:id="@+id/txv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.0"
                android:textAlignment="center" />

        </RelativeLayout>
    -->

</RelativeLayout>
